# PolyMCP

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
examples/: UnifiedPolyAgent_new_feat.py  codemode_example.py  docker_skills_playwright_example.py  dual_mode_mcp.py  example_stdio_server.py  example_wasm_builder.py  filesystem_skills_example.py  mixed_servers_example.py  multi_server_setup.py  playwright_example.py  run_agent.py  simple_example.py  skills_sh_agent_example.py  test_both_auth.py  test_skills_system.py  test_stdio_client.py  test_unified_auth.py  unified_skills_playwright_example.py
polymcp/: __init__.py  mcp_stdio_client.py  skills_cli.py  version.py
polymcp-ts/: README.md  jest.config.js  package-lock.json  package.json
polymcp-ts/agent/: agent.ts
polymcp-ts/auth/: index.ts
polymcp-ts/examples/: UnifiedPolyAgent_new_feat.ts  advanced_workflow.ts  auth_example.ts  docker_advanced_example.ts  examples_complete.ts  mcp_apps_complete_example.ts  mcp_apps_examples.ts  mcp_apps_gpt_test.ts  mcp_apps_live_server.ts  multi_server_agent.ts  ollama_agent.ts  playwright_server.ts  playwright_stdio.ts  polyclaw_example.ts  polyclaw_mcp_workflow_example.ts  simple_example.ts  skills_sh_agent_example.ts  skills_workflow_example.ts  stdio_complete_example.ts  test-add.json  test-uppercase.json  test-weather.json  test_tool_server.ts
polymcp-ts/src/: constants.ts  dual_mode_mcp.ts  errors.ts  expose_tools_stdio.ts  index.ts  mcp_stdio_client.ts  skills_cli.ts  skills_sh.ts  tool-helpers.ts  types.ts  version.ts
polymcp/cli/: README.md  __init__.py  main.py
polymcp/inspector/: server.py
polymcp/polyagent/: __init__.py  agent.py  auth_base.py  codemode_agent.py  jwt_auth.py  llm_providers.py  mcp_url.py  oauth2_auth.py  skill_generator.py  skill_loader.py  skill_matcher.py  skills_sh.py  tool_normalize.py  unified_agent.py  unified_auth_wrapper.py
polymcp/polyclaw/: __init__.py  agent.py
polymcp/polymcp_toolkit/: expose.py
polymcp/sandbox/: docker_executor.py
polymcp/templates/: skill_template.md
polymcp/tools/: advances_tools.py  auth_server.py  summarize_tool.py
registry/: stdio_registry.json  tool_registry.json
tests/: run_agent.py  test_basic.py  test_polyclaw.py  test_unified_agent_validation.py
uses_cases/: README.md
uses_cases/b2b_dispatch_orchestrator/: README.md  __init__.py  server.py  smoke_test.py
uses_cases/b2b_support_copilot/: README.md  __init__.py  (+2 more)
(+55 files in other folders)
